story truncated and ellipsis added, bug in truncation fixed
bug in truncation fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,10 @@ p {
     flex-wrap: wrap;
 }
 
+.story-body {
+    margin: 10px;
+}
+
 .card {
     width: 400px;
     margin: 20px;
